--- a/index.html
+++ b/index.html
@@ -16,5 +16,10 @@
         <li> Javascript</li>
         <li> Python</li>
     </ul>
+
+    <header>
+         <footer>
+             </footer> 
+            </header>
 </body>
 </html>
